added reset password.

--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "multiservices-expo",
     "slug": "multiservices-expo",
     "version": "1.0.0",
+    "scheme": "com.anonymous.multiservicesexpo",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
